Adiciona auto-reset, estiliza menu, mostra vereditos

--- a/index.html
+++ b/index.html
@@ -17,29 +17,30 @@
     </div>
 
 
-    <div class="bg-dark text-center mb-5">
-        <div class="container">
+    <div id="bar" class="mb-5">
+        <div class="container d-flex justify-content-around">
             <button id="reset" class="btn btn-info mt-0">NEW COLORS</button>
+            <span id="result" class="justify-self-center align-self-center">sdas</span>
         </div>
     </div>
     <div class="container">
-        <div class="row mb-5">
-            <div class="col-12 col-md-6 col-lg-4 mb-5">
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card"></div>
             </div>      
-            <div class="col-12 col-md-6 col-lg-4 mb-5">
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card"></div>
             </div>      
-            <div class="col-12 col-md-6  col-lg-4 mb-5">
+            <div class="col-12 col-md-6  col-lg-4 mb-3">
                 <div class="card"></div>
             </div>      
-            <div class="col-12 col-md-6 col-lg-4 mb-5">
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card"></div>
             </div>      
-            <div class="col-12 col-md-6 col-lg-4 mb-5">
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card"></div>
             </div>      
-            <div class="col-12 col-md-6 col-lg-4 mb-5">
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card"></div>
             </div>      
         </div>
