Resolve problema de visualização em telas pequenas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="bar" class="mb-5">
         <div class="container d-flex justify-content-around">
             <button id="reset" class="btn btn-info mt-0">NEW COLORS</button>
-            <span id="result" class="justify-self-center align-self-center"></span>
+            <span id="result" class="justify-self-center align-self-center d-none d-md-block"></span>
             <div class="align-self-center">
                 <span class="mr-2"> <i class="fas fa-fire"></i> <span id="points">0</span> </span>
                 <i class="fas fa-trophy"></i> <span id="best">0</span>
